--- a/node/package.json
+++ b/node/package.json
@@ -6,12 +6,14 @@
   "author": "gabrielalimact <lgcl@ic.ufal.br>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/app.ts"
+    "dev": "ts-node-dev --exit-child src/app.ts"
   },
   "dependencies": {
+    "@prisma/client": "^3.3.0",
     "axios": "^0.23.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
