--- a/node/package.json
+++ b/node/package.json
@@ -16,7 +16,8 @@
     "course": "^0.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
