--- a/node/package.json
+++ b/node/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "socket.io-client": "^4.3.2",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
