--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.0",
     "@expo-google-fonts/roboto": "^0.2.0",
+    "axios": "^0.24.0",
     "expo": "~43.0.0",
     "expo-app-loading": "~1.2.1",
     "expo-font": "~10.0.3",
